Fixed the jumping of everything, now just changed the border color and size, so everything is the same size

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -168,7 +168,7 @@ footer a i b{
 
 #messages {
 	list-style-type: none;
-	border: 2px solid red;
+	border: 4px solid red;
 	display: grid;
 	height: 650px;
 	overflow: auto;
